--- a/Configs/config.ini
+++ b/Configs/config.ini
@@ -22,6 +22,10 @@ path_uf_MC = /uscmst1b_scratch/lpc1/lpctrig/duong/Output_ZplusB/Check/
 #path_uf_MC = /uscmst1b_scratch/lpc1/lpctrig/duong/Output_ZplusB/V1_nanoV7_unfolding_allWeight_tightMuonIso_tightJetID_newFillUnfolding_newDphiBBbinning/
 #path_uf_MC = /uscmst1b_scratch/lpc1/lpctrig/duong/Output_ZplusB/JERD/
 #path_uf_Data = /uscmst1b_scratch/lpc1/lpctrig/duong/Output_ZplusB/V1_nanoV7_unfolding_allWeight_tightMuonIso_tightJetID_newFillUnfolding_newDphiBBbinning/
+path_uf_MC_SCALE = /uscmst1b_scratch/lpc1/lpctrig/duong/Output_ZplusB/SCALE/
+path_uf_MC_PDFG0 = /uscmst1b_scratch/lpc1/lpctrig/duong/Output_ZplusB/PDFG0/
+path_uf_MC_PDFG1 = /uscmst1b_scratch/lpc1/lpctrig/duong/Output_ZplusB/PDFG1/
+path_uf_MC_PDFG2 = /uscmst1b_scratch/lpc1/lpctrig/duong/Output_ZplusB/PDFG2/
 ##################################
 #sample stuff
 ##################################
@@ -321,12 +325,12 @@ xAxisRange = 0,500
 
 ###############################
 [Plots]
-Z_jet_plot = pt_lep0,pt_lep1,eta_lep0,eta_lep1,ZMass,pt_dilepton,pt_jet,eta_jet,Njet,met
-Z_bjet_plot = pt_lep0,pt_lep1,eta_lep0,eta_lep1,ZMass,pt_dilepton,pt_jet,eta_jet,Njet,mSV_jet,met
-Z_2bjet_plot = pt_lep0,pt_lep1,eta_lep0,eta_lep1,ZMass,pt_dilepton,pt_jet,eta_jet,pt_jet1,eta_jet1,pt_Z2b,m_2b,m_Z2b,dR_2b,dPhi_2b,A_Z2b,dPhi_Zb,dPhi_Zb1,dRmin_Z2b,mSV_jet1,mSV_jet,met
-#Z_jet_plot = pt_lep0
-#Z_bjet_plot = pt_lep0
-#Z_2bjet_plot = pt_lep0,dR_2b,A_Z2b,dRmin_Z2b
+#Z_jet_plot = pt_lep0,pt_lep1,eta_lep0,eta_lep1,ZMass,pt_dilepton,pt_jet,eta_jet,Njet,met
+#Z_bjet_plot = pt_lep0,pt_lep1,eta_lep0,eta_lep1,ZMass,pt_dilepton,pt_jet,eta_jet,Njet,mSV_jet,met
+#Z_2bjet_plot = pt_lep0,pt_lep1,eta_lep0,eta_lep1,ZMass,pt_dilepton,pt_jet,eta_jet,pt_jet1,eta_jet1,pt_Z2b,m_2b,m_Z2b,dR_2b,dPhi_2b,A_Z2b,dPhi_Zb,dPhi_Zb1,dRmin_Z2b,mSV_jet1,mSV_jet,met
+Z_jet_plot = pt_lep0
+Z_bjet_plot = pt_lep0
+Z_2bjet_plot = pt_lep0
 #Z_jet_plot = pt_lep0,pt_lep1,ZMass
 #Z_bjet_plot = pt_lep0,pt_lep1
 #Z_2bjet_plot = pt_lep0,pt_lep1,dR_2b
