--- a/Configs/config.ini
+++ b/Configs/config.ini
@@ -11,9 +11,24 @@ lumi_18 = 59710
 #this is used in unfolding
 #path = /uscmst1b_scratch/lpc1/lpctrig/duong/Output_ZplusB/V1_nanoV7_unfolding_allWeight_tightMuonIso_newFillUnfolding_1/
 #path_uf = /uscmst1b_scratch/lpc1/lpctrig/duong/Output_ZplusB/V1_nanoV7_unfolding_allWeight_tightMuonIso_newFillUnfolding_1/
-path = /uscmst1b_scratch/lpc1/lpctrig/duong/Output_ZplusB/Check/
-path_uf_Data = /uscmst1b_scratch/lpc1/lpctrig/duong/Output_ZplusB/Check/
-path_uf_MC = /uscmst1b_scratch/lpc1/lpctrig/duong/Output_ZplusB/Check/
+#use this for new control plots and PDF and scale unc.
+#use for new control plots, syst study, all data complete
+#path = /uscmst1b_scratch/lpc1/lpctrig/duong/Output_ZplusB/Check/
+#path_uf_Data = /uscmst1b_scratch/lpc1/lpctrig/duong/Output_ZplusB/Check/
+#path_uf_MC = /uscmst1b_scratch/lpc1/lpctrig/duong/Output_ZplusB/Check/
+path = /uscmst1b_scratch/lpc1/lpctrig/duong/Output_ZplusB_postProc_checkMET/NONE/
+path_uf_Data = /uscmst1b_scratch/lpc1/lpctrig/duong/Output_ZplusB_postProc_checkMET/NONE/
+path_uf_MC = /uscmst1b_scratch/lpc1/lpctrig/duong/Output_ZplusB_postProc_checkMET/NONE/
+#use this for scale and pdf unc.
+#path = /uscmst1b_scratch/lpc1/lpctrig/duong/Output_ZplusB_pdfScale/NONE/
+#path_uf_Data = /uscmst1b_scratch/lpc1/lpctrig/duong/Output_ZplusB_pdfScale/NONE/
+#path_uf_MC = /uscmst1b_scratch/lpc1/lpctrig/duong/Output_ZplusB_pdfScale/SCALE/
+#use this for exp. syst. unc.
+#path = /uscmst1b_scratch/lpc1/lpctrig/duong/Output_ZplusB_postProc/NONE/
+#path_uf_Data = /uscmst1b_scratch/lpc1/lpctrig/duong/Output_ZplusB_postProc/NONE/
+#path_uf_MC = /uscmst1b_scratch/lpc1/lpctrig/duong/Output_ZplusB_postProc/NONE/
+#these are samples with missing files
+path_uf_MC_1 = /uscmst1b_scratch/lpc1/lpctrig/duong/Output_ZplusB_pdfScale/NONE/
 #####for syst studies########
 #path = /uscmst1b_scratch/lpc1/lpctrig/duong/Output_ZplusB/V1_nanoV7_unfolding_allWeight_tightMuonIso_tightJetID_newFillUnfolding_newDphiBBbinning/
 #path_uf = /uscmst1b_scratch/lpc1/lpctrig/duong/Output_ZplusB/V1_nanoV7_unfolding_allWeight_tightMuonIso_tightJetID_newFillUnfolding_newDphiBBbinning/
@@ -22,10 +37,30 @@ path_uf_MC = /uscmst1b_scratch/lpc1/lpctrig/duong/Output_ZplusB/Check/
 #path_uf_MC = /uscmst1b_scratch/lpc1/lpctrig/duong/Output_ZplusB/V1_nanoV7_unfolding_allWeight_tightMuonIso_tightJetID_newFillUnfolding_newDphiBBbinning/
 #path_uf_MC = /uscmst1b_scratch/lpc1/lpctrig/duong/Output_ZplusB/JERD/
 #path_uf_Data = /uscmst1b_scratch/lpc1/lpctrig/duong/Output_ZplusB/V1_nanoV7_unfolding_allWeight_tightMuonIso_tightJetID_newFillUnfolding_newDphiBBbinning/
-path_uf_MC_SCALE = /uscmst1b_scratch/lpc1/lpctrig/duong/Output_ZplusB/SCALE/
-path_uf_MC_PDFG0 = /uscmst1b_scratch/lpc1/lpctrig/duong/Output_ZplusB/PDFG0/
-path_uf_MC_PDFG1 = /uscmst1b_scratch/lpc1/lpctrig/duong/Output_ZplusB/PDFG1/
-path_uf_MC_PDFG2 = /uscmst1b_scratch/lpc1/lpctrig/duong/Output_ZplusB/PDFG2/
+path_uf_MC_PUU = /uscmst1b_scratch/lpc1/lpctrig/duong/Output_ZplusB_postProc/PUU/
+path_uf_MC_PUD = /uscmst1b_scratch/lpc1/lpctrig/duong/Output_ZplusB_postProc/PUD/
+path_uf_MC_L1PREFIRINGU = /uscmst1b_scratch/lpc1/lpctrig/duong/Output_ZplusB_postProc/L1PREFIRINGU/
+path_uf_MC_L1PREFIRINGD = /uscmst1b_scratch/lpc1/lpctrig/duong/Output_ZplusB_postProc/L1PREFIRINGD/
+path_uf_MC_BTAGU = /uscmst1b_scratch/lpc1/lpctrig/duong/Output_ZplusB_postProc/BTAGU/
+path_uf_MC_BTAGD = /uscmst1b_scratch/lpc1/lpctrig/duong/Output_ZplusB_postProc/BTAGD/
+path_uf_MC_ELEU = /uscmst1b_scratch/lpc1/lpctrig/duong/Output_ZplusB_postProc/ELEU/
+path_uf_MC_ELED = /uscmst1b_scratch/lpc1/lpctrig/duong/Output_ZplusB_postProc/ELED/
+path_uf_MC_MUONU = /uscmst1b_scratch/lpc1/lpctrig/duong/Output_ZplusB_postProc/MUONU/
+path_uf_MC_MUOND = /uscmst1b_scratch/lpc1/lpctrig/duong/Output_ZplusB_postProc/MUOND/
+path_uf_MC_JESU = /uscmst1b_scratch/lpc1/lpctrig/duong/Output_ZplusB_postProc/JESU/
+path_uf_MC_JESD = /uscmst1b_scratch/lpc1/lpctrig/duong/Output_ZplusB_postProc/JESD/
+path_uf_MC_JERU = /uscmst1b_scratch/lpc1/lpctrig/duong/Output_ZplusB_postProc/JERU/
+path_uf_MC_JERD = /uscmst1b_scratch/lpc1/lpctrig/duong/Output_ZplusB_postProc/JERD/
+path_uf_MC_METJESU = /uscmst1b_scratch/lpc1/lpctrig/duong/Output_ZplusB_postProc/METJESU/
+path_uf_MC_METJESD = /uscmst1b_scratch/lpc1/lpctrig/duong/Output_ZplusB_postProc/METJESD/
+path_uf_MC_METJERU = /uscmst1b_scratch/lpc1/lpctrig/duong/Output_ZplusB_postProc/METJERU/
+path_uf_MC_METJERD = /uscmst1b_scratch/lpc1/lpctrig/duong/Output_ZplusB_postProc/METJERD/
+path_uf_MC_METUNCLUSTU = /uscmst1b_scratch/lpc1/lpctrig/duong/Output_ZplusB_postProc/METUNCLUSTU/
+path_uf_MC_METUNCLUSTD = /uscmst1b_scratch/lpc1/lpctrig/duong/Output_ZplusB_postProc/METUNCLUSTD/
+path_uf_MC_SCALE = /uscmst1b_scratch/lpc1/lpctrig/duong/Output_ZplusB_pdfScale/SCALE/
+path_uf_MC_PDFG0 = /uscmst1b_scratch/lpc1/lpctrig/duong/Output_ZplusB_pdfScale/PDFG0/
+path_uf_MC_PDFG1 = /uscmst1b_scratch/lpc1/lpctrig/duong/Output_ZplusB_pdfScale/PDFG1/
+path_uf_MC_PDFG2 = /uscmst1b_scratch/lpc1/lpctrig/duong/Output_ZplusB_pdfScale/PDFG2/
 ##################################
 #sample stuff
 ##################################
@@ -41,66 +76,93 @@ file_18 = SingleMuon_DATA_2018.root
 file_16 = DY_0J_amcatnlo_MC_2016.root
 file_17 = DY_0J_amcatnlo_MC_2017.root
 file_18 = DY_0J_amcatnlo_MC_2018.root
-xSec_16 = 4578.46*1.054
-xSec_17 = 4578.46*1.054
-xSec_18 = 4578.46*1.054
+#xSec_16 = 4578.46*1.054
+#xSec_17 = 4578.46*1.054
+#xSec_18 = 4578.46*1.054
+xSec_16 = 4620.519*1.0445
+xSec_17 = 5313*0.9167
+xSec_18 = 5313*0.9167
 #normalize to 6077.22
 [DY_1J]
 file_16 = DY_1J_amcatnlo_MC_2016.root
 file_17 = DY_1J_amcatnlo_MC_2017.root
 file_18 = DY_1J_amcatnlo_MC_2018.root
-xSec_16 = 851.76*1.054
-xSec_17 = 851.76*1.054
-xSec_18 = 851.76*1.054
+#xSec_16 = 851.76*1.054
+#xSec_17 = 851.76*1.054
+#xSec_18 = 851.76*1.054
+xSec_16 = 859.58*1.0445
+xSec_17 = 955.8*0.9167
+xSec_18 = 955.8*0.9167
 [DY_2J]
 file_16 = DY_2J_amcatnlo_MC_2016.root
 file_17 = DY_2J_amcatnlo_MC_2017.root
 file_18 = DY_2J_amcatnlo_MC_2018.root
-xSec_16 = 335.18*1.054
-xSec_17 = 335.18*1.054
-xSec_18 = 335.18*1.054
+#xSec_16 = 335.18*1.054
+#xSec_17 = 335.18*1.054
+#xSec_18 = 335.18*1.054
+xSec_16 = 338.25*1.0445
+xSec_17 = 360.4*0.9167
+xSec_18 = 360.4*0.9167
 [DY_0J_p1]
 file_16 = DY_0J_amcatnlo_2016_p1.root
 file_17 = DY_0J_amcatnlo_2017_p1.root
 file_18 = DY_0J_amcatnlo_2018_p1.root
-xSec_16 = 4578.46*1.054
-xSec_17 = 4578.46*1.054
-xSec_18 = 4578.46*1.054
+#xSec_16 = 4578.46*1.054
+#xSec_17 = 4578.46*1.054
+#xSec_18 = 4578.46*1.054
+xSec_16 = 4620.519*1.0445
+xSec_17 = 5313*0.9167
+xSec_18 = 5313*0.9167
 [DY_1J_p1]
 file_16 = DY_1J_amcatnlo_2016_p1.root
 file_17 = DY_1J_amcatnlo_2017_p1.root
 file_18 = DY_1J_amcatnlo_2018_p1.root
-xSec_16 = 851.76*1.054
-xSec_17 = 851.76*1.054
-xSec_18 = 851.76*1.054
+#xSec_16 = 851.76*1.054
+#xSec_17 = 851.76*1.054
+#xSec_18 = 851.76*1.054
+xSec_16 = 859.58*1.0445
+xSec_17 = 955.8*0.9167
+xSec_18 = 955.8*0.9167
 [DY_2J_p1]
 file_16 = DY_2J_amcatnlo_2016_p1.root
 file_17 = DY_2J_amcatnlo_2017_p1.root
 file_18 = DY_2J_amcatnlo_2018_p1.root
-xSec_16 = 335.18*1.054
-xSec_17 = 335.18*1.054
-xSec_18 = 335.18*1.054
+#xSec_16 = 335.18*1.054
+#xSec_17 = 335.18*1.054
+#xSec_18 = 335.18*1.054
+xSec_16 = 338.25*1.0445
+xSec_17 = 360.4*0.9167
+xSec_18 = 360.4*0.9167
 [DY_0J_p2]
 file_16 = DY_0J_amcatnlo_2016_p2.root
 file_17 = DY_0J_amcatnlo_2017_p2.root
 file_18 = DY_0J_amcatnlo_2018_p2.root
-xSec_16 = 4578.46*1.054
-xSec_17 = 4578.46*1.054
-xSec_18 = 4578.46*1.054
+#xSec_16 = 4578.46*1.054
+#xSec_17 = 4578.46*1.054
+#xSec_18 = 4578.46*1.054
+xSec_16 = 4620.519*1.0445
+xSec_17 = 5313*0.9167
+xSec_18 = 5313*0.9167
 [DY_1J_p2]
 file_16 = DY_1J_amcatnlo_2016_p2.root
 file_17 = DY_1J_amcatnlo_2017_p2.root
 file_18 = DY_1J_amcatnlo_2018_p2.root
-xSec_16 = 851.76*1.054
-xSec_17 = 851.76*1.054
-xSec_18 = 851.76*1.054
+#xSec_16 = 851.76*1.054
+#xSec_17 = 851.76*1.054
+#xSec_18 = 851.76*1.054
+xSec_16 = 859.58*1.0445
+xSec_17 = 955.8*0.9167
+xSec_18 = 955.8*0.9167
 [DY_2J_p2]
 file_16 = DY_2J_amcatnlo_2016_p2.root
 file_17 = DY_2J_amcatnlo_2017_p2.root
 file_18 = DY_2J_amcatnlo_2018_p2.root
-xSec_16 = 335.18*1.054
-xSec_17 = 335.18*1.054
-xSec_18 = 335.18*1.054
+#xSec_16 = 335.18*1.054
+#xSec_17 = 335.18*1.054
+#xSec_18 = 335.18*1.054
+xSec_16 = 338.25*1.0445
+xSec_17 = 360.4*0.9167
+xSec_18 = 360.4*0.9167
 [DY_MG]
 file_16 = DY_madgraphMLM_MC_2016.root 
 file_17 = DY_madgraphMLM_MC_2017.root
@@ -328,9 +390,9 @@ xAxisRange = 0,500
 #Z_jet_plot = pt_lep0,pt_lep1,eta_lep0,eta_lep1,ZMass,pt_dilepton,pt_jet,eta_jet,Njet,met
 #Z_bjet_plot = pt_lep0,pt_lep1,eta_lep0,eta_lep1,ZMass,pt_dilepton,pt_jet,eta_jet,Njet,mSV_jet,met
 #Z_2bjet_plot = pt_lep0,pt_lep1,eta_lep0,eta_lep1,ZMass,pt_dilepton,pt_jet,eta_jet,pt_jet1,eta_jet1,pt_Z2b,m_2b,m_Z2b,dR_2b,dPhi_2b,A_Z2b,dPhi_Zb,dPhi_Zb1,dRmin_Z2b,mSV_jet1,mSV_jet,met
-Z_jet_plot = pt_lep0
-Z_bjet_plot = pt_lep0
-Z_2bjet_plot = pt_lep0
+Z_jet_plot = pt_lep0,ZMass,met
+Z_bjet_plot = pt_lep0,ZMass,met
+Z_2bjet_plot = pt_lep0,ZMass,met
 #Z_jet_plot = pt_lep0,pt_lep1,ZMass
 #Z_bjet_plot = pt_lep0,pt_lep1
 #Z_2bjet_plot = pt_lep0,pt_lep1,dR_2b
